# citas_medicas

./: Dockerfile  README.md  citas_medicas.db  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: ffa88e21f6b3_initial_schema.py
app/: config.py  main.py
app/application/: cita_service.py  doctor_service.py  paciente_service.py  schemas.py
app/domain/: entities.py  enums.py  exceptions.py  rules.py
app/infrastructure/: database.py  models.py
app/infrastructure/repositories/: base.py  cita_repo.py  doctor_repo.py  paciente_repo.py
app/presentation/: dependencies.py  error_handlers.py
app/presentation/routers/: cita_router.py  doctor_router.py  paciente_router.py
specs/: checklist.md  documento-presentacion.md  guion-presentacion.md  plan-desarrollo.md  spec-1.md
tests/: conftest.py
tests/integration/: test_cita_api.py  test_doctor_api.py  test_paciente_api.py
tests/unit/: test_cita_service.py  test_doctor_service.py  test_paciente_service.py  test_rules.py
