[project]
name = "citas-medicas"
version = "0.1.0"
description = "Sistema backend para gestión de citas médicas"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic[email]",
    "pydantic-settings",
    "alembic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "pytest-asyncio",
]
postgres = [
    "psycopg2-binary",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
